Added Items (without relationships), changed Logo

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="footer" ng-cloak>
-            <p data-translate="footer">This is your footer</p>
+            <p data-translate="footer"></p>
         </div>
     </div>
 
@@ -100,6 +100,12 @@
     <script src="app/entities/review/review.state.js"></script>
     <script src="app/entities/review/review.service.js"></script>
     <script src="app/entities/review/review.controller.js"></script>
+    <script src="app/entities/item/item-dialog.controller.js"></script>
+    <script src="app/entities/item/item-detail.controller.js"></script>
+    <script src="app/entities/item/item-delete-dialog.controller.js"></script>
+    <script src="app/entities/item/item.state.js"></script>
+    <script src="app/entities/item/item.service.js"></script>
+    <script src="app/entities/item/item.controller.js"></script>
     <script src="app/entities/entity.state.js"></script>
     <script src="app/components/util/truncate-words.filter.js"></script>
     <script src="app/components/util/truncate-characters.filter.js"></script>
