--- a/src/main/webapp/app/entities/review/reviews.html
+++ b/src/main/webapp/app/entities/review/reviews.html
@@ -21,6 +21,7 @@
                     <th><span data-translate="global.field.id">ID</span></th>
                     <th><span data-translate="getReviewsApp.review.text">Text</span></th>
                     <th><span data-translate="getReviewsApp.review.rating">Rating</span></th>
+                    <th><span data-translate="getReviewsApp.review.item">Item</span></th>
                     <th></th>
                 </tr>
             </thead>
@@ -29,6 +30,9 @@
                     <td><a ui-sref="review-detail({id:review.id})">{{review.id}}</a></td>
                     <td>{{review.text}}</td>
                     <td>{{review.rating}}</td>
+                    <td>
+                        <a ui-sref="item-detail({id:review.item.id})">{{review.item.name}}</a>
+                    </td>
                     <td class="text-right">
                         <div class="btn-group flex-btn-group-container">
                             <button type="submit"
