--- a/src/main/webapp/app/entities/image/image-detail.html
+++ b/src/main/webapp/app/entities/image/image-detail.html
@@ -8,6 +8,10 @@
         <dd>
             <span>{{vm.image.url}}</span>
         </dd>
+        <dt><span data-translate="getReviewsApp.image.item">Item</span></dt>
+        <dd>
+            <a ui-sref="item-detail({id:vm.image.item.id})">{{vm.image.item.id}}</a>
+        </dd>
     </dl>
 
     <button type="submit"
