--- a/src/main/webapp/app/entities/image/image-dialog.html
+++ b/src/main/webapp/app/entities/image/image-dialog.html
@@ -20,6 +20,13 @@
                      />
         </div>
 
+        <div class="form-group">
+            <label data-translate="getReviewsApp.image.item" for="field_item">Item</label>
+            <select class="form-control" id="field_item" name="item" ng-model="vm.image.item"
+                    ng-options="item as item.id for item in vm.items track by item.id">
+                <option value=""></option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="vm.clear()">
