--- a/src/main/webapp/app/entities/item/item-dialog.html
+++ b/src/main/webapp/app/entities/item/item-dialog.html
@@ -1,5 +1,4 @@
-
-<form name="editForm" role="form" novalidate ng-submit="vm.save()">
+<form name="editForm" role="form" novalidate ng-submit="vm.save()" show-validation>
 
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
@@ -22,8 +21,15 @@
         <div class="form-group">
             <label class="control-label" data-translate="getReviewsApp.item.description" for="field_description">Description</label>
             <input type="text" class="form-control" name="description" id="field_description"
-                    ng-model="vm.item.description"
-                     />
+                   ng-model="vm.item.description"
+                   ng-maxlength="10000"/>
+            <div ng-show="editForm.description.$invalid">
+                <p class="help-block"
+                   ng-show="editForm.description.$error.maxlength" data-translate="entity.validation.maxlength"
+                   translate-value-max="10000">
+                    This field cannot be longer than 10000 characters.
+                </p>
+            </div>
         </div>
 
     </div>
