--- a/src/main/webapp/app/entities/image/images.html
+++ b/src/main/webapp/app/entities/image/images.html
@@ -4,9 +4,9 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary" ui-sref="image.new">
+                <button class="btn btn-primary" ui-sref="image.new" >
                     <span class="glyphicon glyphicon-plus"></span>
-                    <span data-translate="getReviewsApp.image.home.createLabel">
+                    <span  data-translate="getReviewsApp.image.home.createLabel">
                         Create new Image
                     </span>
                 </button>
@@ -17,44 +17,48 @@
     <div class="table-responsive">
         <table class="jh-table table table-striped">
             <thead>
-            <tr>
-                <th><span data-translate="global.field.id">ID</span></th>
-                <th><span data-translate="getReviewsApp.image.url">Url</span></th>
-                <th><span data-translate="getReviewsApp.image.item">Item</span></th>
-                <th></th>
-            </tr>
+                <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
+                    <th jh-sort-by="id"><span data-translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="url"><span data-translate="getReviewsApp.image.url">Url</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th jh-sort-by="item.id"><span data-translate="getReviewsApp.image.item">Item</span> <span class="glyphicon glyphicon-sort"></span></th>
+                    <th></th>
+                </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="image in vm.images track by image.id">
-                <td><a ui-sref="image-detail({id:image.id})">{{image.id}}</a></td>
-                <td>{{image.url}}</td>
-                <td>
-                    <a ui-sref="item-detail({id:image.item.id})">{{image.item.id}}</a>
-                </td>
-                <td class="text-right">
-                    <div class="btn-group flex-btn-group-container">
-                        <button type="submit"
-                                ui-sref="image-detail({id:image.id})"
-                                class="btn btn-info btn-sm">
-                            <span class="glyphicon glyphicon-eye-open"></span>
-                            <span class="hidden-xs hidden-sm" data-translate="entity.action.view"></span>
-                        </button>
-                        <button type="submit"
-                                ui-sref="image.edit({id:image.id})"
-                                class="btn btn-primary btn-sm">
-                            <span class="glyphicon glyphicon-pencil"></span>
-                            <span class="hidden-xs hidden-sm" data-translate="entity.action.edit"></span>
-                        </button>
-                        <button type="submit"
-                                ui-sref="image.delete({id:image.id})"
-                                class="btn btn-danger btn-sm">
-                            <span class="glyphicon glyphicon-remove-circle"></span>
-                            <span class="hidden-xs hidden-sm" data-translate="entity.action.delete"></span>
-                        </button>
-                    </div>
-                </td>
-            </tr>
+                <tr ng-repeat="image in vm.images track by image.id">
+                    <td><a ui-sref="image-detail({id:image.id})">{{image.id}}</a></td>
+                    <td>{{image.url}}</td>
+                    <td>
+                        <a ui-sref="item-detail({id:image.item.id})">{{image.item.id}}</a>
+                    </td>
+                    <td class="text-right">
+                        <div class="btn-group flex-btn-group-container">
+                            <button type="submit"
+                                    ui-sref="image-detail({id:image.id})"
+                                    class="btn btn-info btn-sm">
+                                <span class="glyphicon glyphicon-eye-open"></span>
+                                <span class="hidden-xs hidden-sm" data-translate="entity.action.view"></span>
+                            </button>
+                            <button type="submit"
+                                    ui-sref="image.edit({id:image.id})"
+                                    class="btn btn-primary btn-sm">
+                                <span class="glyphicon glyphicon-pencil"></span>
+                                <span class="hidden-xs hidden-sm" data-translate="entity.action.edit"></span>
+                            </button>
+                            <button type="submit"
+                                    ui-sref="image.delete({id:image.id})"
+                                    class="btn btn-danger btn-sm">
+                                <span class="glyphicon glyphicon-remove-circle"></span>
+                                <span class="hidden-xs hidden-sm" data-translate="entity.action.delete"></span>
+                            </button>
+                        </div>
+                    </td>
+                </tr>
             </tbody>
         </table>
+    </div>
+    <div class="text-center">
+        <jhi-item-count page="vm.page" total="vm.queryCount" items-per-page="vm.itemsPerPage"></jhi-item-count>
+        <uib-pagination class="pagination-sm" total-items="vm.totalItems" ng-model="vm.page" ng-change="vm.transition()"></uib-pagination>
     </div>
 </div>
