--- a/src/main/webapp/app/entities/review/reviews.html
+++ b/src/main/webapp/app/entities/review/reviews.html
@@ -31,7 +31,7 @@
                 <tr ng-repeat="review in vm.reviews track by review.id">
                     <td><a ui-sref="review-detail({id:review.id})">{{review.id}}</a></td>
                     <td>{{review.rating}}</td>
-                    <td>{{review.text}}</td>
+                    <td>{{review.text | words:100 }}</td>
                     <td>
                         <a ui-sref="source-detail({id:review.source.id})">{{review.source.id}}</a>
                     </td>
