--- a/src/main/webapp/app/entities/item/items.html
+++ b/src/main/webapp/app/entities/item/items.html
@@ -1,62 +1,198 @@
-<div>
-    <h2 data-translate="getReviewsApp.item.home.title">Items</h2>
-    <jhi-alert></jhi-alert>
-    <div class="container-fluid">
+<div id="search-row-wrapper">
+    <div class="container">
+        <div class="search-inner">
+            <!-- Start Search box -->
+            <div class="row search-bar">
+                <div class="advanced-search">
+                    <form class="search-form" method="get">
+                        <div class="col-md-9 col-sm-6 search-col">
+                            <input class="form-control keyword" name="keyword" value="" placeholder="Enter Keyword" type="text">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <div class="col-md-3 col-sm-6 search-col">
+                            <button class="btn btn-common btn-search btn-block"><strong>Search</strong></button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!-- End Search box -->
+        </div>
+    </div>
+</div>
+<!-- Search wrapper End -->
+
+<!-- Main container Start -->
+<div class="main-container">
+    <div>
+        <jhi-alert></jhi-alert>
+    </div>
+
+    <div class="row" style="padding: 10px 0 0 10px">
+        <div class="col-md-4 col-md-offset-8">
+            <button class="btn btn-primary" ui-sref="item.new" >
+                <span class="glyphicon glyphicon-plus"></span>
+                <span  data-translate="getReviewsApp.item.home.createLabel">
+                    Create new Item
+                </span>
+            </button>
+        </div>
+    </div>
+
+    <div class="container">
         <div class="row">
-            <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary" ui-sref="item.new" >
-                    <span class="glyphicon glyphicon-plus"></span>
-                    <span  data-translate="getReviewsApp.item.home.createLabel">
-                        Create new Item
-                    </span>
-                </button>
+            <div class="col-sm-3 page-sidebar">
+                <aside>
+                    <div class="inner-box">
+                        <div class="categories">
+                            <div class="widget-title">
+                                <i class="fa fa-align-justify"></i>
+                                <h4>All Categories</h4>
+                            </div>
+                            <div class="categories-list">
+                                <ul>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-desktop"></i>
+                                            Electronics <span class="category-counter">(9)</span>
+                                        </a>
+                                    </li>
+
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-wrench"></i>
+                                            Services <span class="category-counter">(8)</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-github-alt"></i>
+                                            Pets <span class="category-counter">(2)</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-leaf"></i>
+                                            Fashion <span class="category-counter">(3)</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-home"></i>
+                                            Real Estate <span class="category-counter">(4)</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-black-tie"></i>
+                                            Jobs <span class="category-counter">(5)</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-cutlery"></i>
+                                            Hotel & Travels <span class="category-counter">(5)</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="inner-box">
+                        <div class="widget-title">
+                            <h4>Advertisement</h4>
+                        </div>
+                        <img src="content/img/img1.png" alt="">
+                    </div>
+                </aside>
+            </div>
+            <div class="col-sm-9 page-content">
+                <!-- Product filter Start -->
+                <div class="product-filter">
+                    <div class="short-name">
+                        <span>Sort By</span>
+                        <form class="name-ordering" method="post">
+                            <label>
+                                <select name="order" class="orderby">
+                                    <option selected="selected" value="menu-order">Sort by</option>
+                                    <option value="popularity">Price: Low to High</option>
+                                    <option value="popularity">Price: High to Low</option>
+                                </select>
+                            </label>
+                        </form>
+                    </div>
+                </div>
+                <!-- Product filter End -->
+
+                <!-- Adds wrapper Start -->
+                <div class="adds-wrapper">
+                    <div class="item-list" ng-repeat="item in vm.items track by item.id">
+                        <div class="col-sm-2 no-padding photobox">
+                            <div class="add-image">
+                                <a href="#"><img src="{{item.imageUrl}}" alt=""></a>
+                                <!--<span class="photo-count"><i class="fa fa-camera"></i>2</span>-->
+                            </div>
+                        </div>
+                        <div class="col-sm-7 add-desc-box">
+                            <div class="add-details">
+                                <h5 class="add-title"><a ui-sref="item-detail({id:item.id})">{{item.name}}</a></h5>
+                                <div class="info">
+                                    <span class="add-type">B</span>
+                                    <span class="date">
+                        <i class="fa fa-clock"></i>
+                        16:22:13 2016-02-29
+                      </span> -
+                                    <span class="category">Electronics</span> -
+                                    <span class="item-location"><i class="fa fa-map-marker"></i>Everywhere</span>
+                                </div>
+                                <div class="item_desc">
+                                    <a href="#">{{item.description | words:30}}</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-sm-3 text-right  price-box">
+                            <h2 class="item-price"> 4.5 </h2>
+                            <div class="btn-group flex-btn-group-container">
+                                <button type="submit"
+                                        ui-sref="item-detail({id:item.id})"
+                                        class="btn btn-info btn-sm">
+                                    <span class="glyphicon glyphicon-eye-open"></span>
+                                    <span class="hidden-xs hidden-sm" data-translate="entity.action.view"></span>
+                                </button>
+                                <button type="submit"
+                                        ui-sref="item.edit({id:item.id})"
+                                        class="btn btn-primary btn-sm">
+                                    <span class="glyphicon glyphicon-pencil"></span>
+                                    <span class="hidden-xs hidden-sm" data-translate="entity.action.edit"></span>
+                                </button>
+                                <button type="submit"
+                                        ui-sref="item.delete({id:item.id})"
+                                        class="btn btn-danger btn-sm">
+                                    <span class="glyphicon glyphicon-remove-circle"></span>
+                                    <span class="hidden-xs hidden-sm" data-translate="entity.action.delete"></span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Adds wrapper End -->
+
+                <!-- Start Pagination -->
+                <div class="pagination-bar">
+                    <!--<ul class="pagination">-->
+                        <!--<li class="active"><a href="#">1</a></li>-->
+                        <!--<li><a href="#">2</a></li>-->
+                        <!--<li><a href="#">3</a></li>-->
+                        <!--<li><a href="#">4</a></li>-->
+                        <!--<li><a href="#"> ...</a></li>-->
+                        <!--<li><a class="pagination-btn" href="#">Next »</a></li>-->
+                    <!--</ul>-->
+                    <jhi-item-count page="vm.page" total="vm.queryCount" items-per-page="vm.itemsPerPage"></jhi-item-count>
+                    <uib-pagination class="pagination-sm" total-items="vm.totalItems" ng-model="vm.page" ng-change="vm.transition()"></uib-pagination>
+                </div>
+                <!-- End Pagination -->
             </div>
         </div>
     </div>
-    <br/>
-    <div class="table-responsive">
-        <table class="jh-table table table-striped">
-            <thead>
-                <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
-                    <th jh-sort-by="id"><span data-translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="name"><span data-translate="getReviewsApp.item.name">Name</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="description"><span data-translate="getReviewsApp.item.description">Description</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="item in vm.items track by item.id">
-                    <td><a ui-sref="item-detail({id:item.id})">{{item.id}}</a></td>
-                    <td>{{item.name}}</td>
-                    <td>{{item.description | words:100}}</td>
-                    <td class="text-right">
-                        <div class="btn-group flex-btn-group-container">
-                            <button type="submit"
-                                    ui-sref="item-detail({id:item.id})"
-                                    class="btn btn-info btn-sm">
-                                <span class="glyphicon glyphicon-eye-open"></span>
-                                <span class="hidden-xs hidden-sm" data-translate="entity.action.view"></span>
-                            </button>
-                            <button type="submit"
-                                    ui-sref="item.edit({id:item.id})"
-                                    class="btn btn-primary btn-sm">
-                                <span class="glyphicon glyphicon-pencil"></span>
-                                <span class="hidden-xs hidden-sm" data-translate="entity.action.edit"></span>
-                            </button>
-                            <button type="submit"
-                                    ui-sref="item.delete({id:item.id})"
-                                    class="btn btn-danger btn-sm">
-                                <span class="glyphicon glyphicon-remove-circle"></span>
-                                <span class="hidden-xs hidden-sm" data-translate="entity.action.delete"></span>
-                            </button>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="text-center">
-        <jhi-item-count page="vm.page" total="vm.queryCount" items-per-page="vm.itemsPerPage"></jhi-item-count>
-        <uib-pagination class="pagination-sm" total-items="vm.totalItems" ng-model="vm.page" ng-change="vm.transition()"></uib-pagination>
-    </div>
 </div>
+<!-- Main container End -->
