--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,7 +20,7 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="content/img/favicon.png">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="content/css/bootstrap.min.css" type="text/css">
+    <!--<link rel="stylesheet" href="content/css/bootstrap.min.css" type="text/css">-->
     <link rel="stylesheet" href="content/css/jasny-bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="content/css/jasny-bootstrap.min.css" type="text/css">
     <!-- Material CSS -->
