--- a/src/main/webapp/app/entities/item/items.html
+++ b/src/main/webapp/app/entities/item/items.html
@@ -145,7 +145,7 @@
                                     <span class="item-location"><i class="fa fa-map-marker"></i>Everywhere</span>
                                 </div>
                                 <div class="item_desc">
-                                    <a href="#">{{item.description | words:30}}</a>
+                                    <a ui-sref="item-detail({id:item.id})">{{item.description | words:30}}</a>
                                 </div>
                             </div>
                         </div>
