#31 average rating properly shown for item

--- a/src/main/webapp/app/home/home.html
+++ b/src/main/webapp/app/home/home.html
@@ -476,205 +476,24 @@
         </section>
         <!-- Featured Listings End -->
 
-        <!-- Start Services Section -->
-        <div class="features">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4 col-sm-6">
-                        <div class="features-box wow fadeInDownQuick" data-wow-delay="0.3s" style="visibility: visible; -webkit-animation-name: none; -moz-animation-name: none; animation-name: none;-webkit-animation-delay: 0.3s; -moz-animation-delay: 0.3s; animation-delay: 0.3s;">
-                            <div class="features-icon">
-                                <i class="fa fa-book">
-                                </i>
-                            </div>
-                            <div class="features-content">
-                                <h4>
-                                    Full Documented
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo aut magni perferendis repellat rerum assumenda facere.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <div class="features-box wow fadeInDownQuick" data-wow-delay="0.6s" style="visibility: visible; -webkit-animation-name: none; -moz-animation-name: none; animation-name: none;-webkit-animation-delay: 0.6s; -moz-animation-delay: 0.6s; animation-delay: 0.6s;">
-                            <div class="features-icon">
-                                <i class="fa fa-paper-plane"></i>
-                            </div>
-                            <div class="features-content">
-                                <h4>
-                                    Clean &amp; Modern Design
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo aut magni perferendis repellat rerum assumenda facere.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <div class="features-box wow fadeInDownQuick" data-wow-delay="0.9s" style="visibility: visible; -webkit-animation-name: none; -moz-animation-name: none; animation-name: none;-webkit-animation-delay: 0.9s; -moz-animation-delay: 0.9s; animation-delay: 0.9s;">
-                            <div class="features-icon">
-                                <i class="fa fa-map"></i>
-                            </div>
-                            <div class="features-content">
-                                <h4>
-                                    Great Features
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo aut magni perferendis repellat rerum assumenda facere.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <div class="features-box wow fadeInDownQuick" data-wow-delay="1.2s" style="visibility: visible; -webkit-animation-name: none; -moz-animation-name: none; animation-name: none;-webkit-animation-delay: 1.2s; -moz-animation-delay: 1.2s; animation-delay: 1.2s;">
-                            <div class="features-icon">
-                                <i class="fa fa-cogs"></i>
-                            </div>
-                            <div class="features-content">
-                                <h4>
-                                    Completely Customizable
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo aut magni perferendis repellat rerum assumenda facere.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <div class="features-box wow fadeInDownQuick" data-wow-delay="1.5s" style="visibility: visible; -webkit-animation-name: none; -moz-animation-name: none; animation-name: none;-webkit-animation-delay: 1.5s; -moz-animation-delay: 1.5s; animation-delay: 1.5s;">
-                            <div class="features-icon">
-                                <i class="fa fa-hourglass"></i>
-                            </div>
-                            <div class="features-content">
-                                <h4>
-                                    100% Responsive Layout
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo aut magni perferendis repellat rerum assumenda facere.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <div class="features-box wow fadeInDownQuick" data-wow-delay="1.8s" style="visibility: visible; -webkit-animation-name: none; -moz-animation-name: none; animation-name: none;-webkit-animation-delay: 1.8s; -moz-animation-delay: 1.8s; animation-delay: 1.8s;">
-                            <div class="features-icon">
-                                <i class="fa fa-hashtag"></i>
-                            </div>
-                            <div class="features-content">
-                                <h4>
-                                    User Friendly
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo aut magni perferendis repellat rerum assumenda facere.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <div class="features-box wow fadeInDownQuick" data-wow-delay="2.1s" style="visibility: visible; -webkit-animation-name: none; -moz-animation-name: none; animation-name: none;-webkit-animation-delay: 2.1s; -moz-animation-delay: 2.1s; animation-delay: 2.1s;">
-                            <div class="features-icon">
-                                <i class="fa fa-newspaper-o"></i>
-                            </div>
-                            <div class="features-content">
-                                <h4>
-                                    Awesome Layout
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo aut magni perferendis repellat rerum assumenda facere.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <div class="features-box wow fadeInDownQuick" data-wow-delay="2.4s" style="visibility: visible; -webkit-animation-name: none; -moz-animation-name: none; animation-name: none;-webkit-animation-delay: 2.4s; -moz-animation-delay: 2.4s; animation-delay: 2.4s;">
-                            <div class="features-icon">
-                                <i class="fa fa-leaf"></i>
-                            </div>
-                            <div class="features-content">
-                                <h4>
-                                    High Quality
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo aut magni perferendis repellat rerum assumenda facere.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <div class="features-box wow fadeInDownQuick" data-wow-delay="2.7s" style="visibility: visible; -webkit-animation-name: none; -moz-animation-name: none; animation-name: none;-webkit-animation-delay: 2.7s; -moz-animation-delay: 2.7s; animation-delay: 2.7s;">
-                            <div class="features-icon">
-                                <i class="fa fa-google"></i>
-                            </div>
-                            <div class="features-content">
-                                <h4>
-                                    Free Google Fonts Use
-                                </h4>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo aut magni perferendis repellat rerum assumenda facere.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Services Section -->
-
-        <!-- Location Section Start -->
-        <section class="location">
-            <div class="container">
-                <div class="row localtion-list">
-                    <div class="col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-delay="0.5s" style="visibility: visible; -webkit-animation-name: none; -moz-animation-name: none; animation-name: none;-webkit-animation-delay: 0.5s; -moz-animation-delay: 0.5s; animation-delay: 0.5s;">
-                        <h3 class="title-2"><i class="fa fa-envelope"></i> Subscribe for updates</h3>
-                        <form id="subscribe" action="">
-                            <p>Join our 10,000+ subscribers and get access to the latest templates, freebies, announcements and resources!</p>
-                            <div class="subscribe">
-                                <div class="form-group is-empty"><input class="form-control" name="EMAIL" placeholder="Your email here" required="" type="email"><span class="material-input"></span></div>
-                                <button class="btn btn-common" type="submit">Subscribe</button>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="col-md-6 col-sm-6 col-xs-12 wow fadeInRight" data-wow-delay="1s" style="visibility: visible; -webkit-animation-name: none; -moz-animation-name: none; animation-name: none;-webkit-animation-delay: 1s; -moz-animation-delay: 1s; animation-delay: 1s;">
-                        <h3 class="title-2"><i class="fa fa-search"></i> Popular Searches</h3>
-                        <ul class="cat-list col-sm-4">
-                            <li> <a href="account-saved-search.html">puppies</a></li>
-                            <li> <a href="account-saved-search.html">puppies for sale</a></li>
-                            <li> <a href="account-saved-search.html">bed</a></li>
-                            <li> <a href="account-saved-search.html">household</a></li>
-                            <li> <a href="account-saved-search.html">chair</a></li>
-                            <li> <a href="account-saved-search.html">materials</a></li>
-                        </ul>
-                        <ul class="cat-list col-sm-4">
-                            <li> <a href="account-saved-search.html">sofa</a></li>
-                            <li> <a href="account-saved-search.html">wanted</a></li>
-                            <li> <a href="account-saved-search.html">furniture</a></li>
-                            <li> <a href="account-saved-search.html">van</a></li>
-                            <li> <a href="account-saved-search.html">wardrobe</a></li>
-                            <li> <a href="account-saved-search.html">caravan</a></li>
-
-                        </ul>
-                        <ul class="cat-list col-sm-4">
-                            <li> <a href="account-saved-search.html">for sale</a></li>
-                            <li> <a href="account-saved-search.html">free</a></li>
-                            <li> <a href="account-saved-search.html">1 bedroom flat</a></li>
-                            <li> <a href="account-saved-search.html">photo+video</a></li>
-                            <li> <a href="account-saved-search.html">bmw</a></li>
-                            <li> <a href="account-saved-search.html">Land </a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Location Section End -->
-
-    </div>
-
     <!-- Counter Section Start -->
     <section id="counter">
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="counting wow fadeInDownQuick" data-wow-delay="2s">
+                        <div class="icon">
+                <span>
+                  <i class="lnr lnr-license"></i>
+                </span>
+                        </div>
+                        <div class="desc">
+                            <h3 class="counter">2132</h3>
+                            <p>Items</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="counting wow fadeInDownQuick" data-wow-delay=".5s">
                         <div class="icon">
                 <span>
@@ -683,24 +502,11 @@
                         </div>
                         <div class="desc">
                             <h3 class="counter">12090</h3>
-                            <p>Regular Ads</p>
+                            <p>Reviews</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="counting wow fadeInDownQuick" data-wow-delay="1s">
-                        <div class="icon">
-                <span>
-                  <i class="lnr lnr-map"></i>
-                </span>
-                        </div>
-                        <div class="desc">
-                            <h3 class="counter">350</h3>
-                            <p>Locations</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="counting wow fadeInDownQuick" data-wow-delay="1.5s">
                         <div class="icon">
                 <span>
@@ -708,21 +514,8 @@
                 </span>
                         </div>
                         <div class="desc">
-                            <h3 class="counter">23453</h3>
-                            <p>Reguler Members</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="counting wow fadeInDownQuick" data-wow-delay="2s">
-                        <div class="icon">
-                <span>
-                  <i class="lnr lnr-license"></i>
-                </span>
-                        </div>
-                        <div class="desc">
-                            <h3 class="counter">150</h3>
-                            <p>Premium Ads</p>
+                            <h3 class="counter">5243</h3>
+                            <p>Members</p>
                         </div>
                     </div>
                 </div>
