--- a/src/main/webapp/app/entities/item/item-detail.html
+++ b/src/main/webapp/app/entities/item/item-detail.html
@@ -26,7 +26,7 @@
                             <div class="col-md-4">
                                 <aside class="panel panel-body panel-details">
                                     <div>Average rating:</div>
-                                    <h3>4.3</h3>
+                                    <h3>{{vm.item.rating | number : 2}}</h3>
                                     <!--<ul>-->
                                         <!--<li>-->
                                             <!--<p class=" no-margin "><strong>Price:</strong> $ 1,045</p>-->
