--- a/src/main/webapp/app/entities/item/items.html
+++ b/src/main/webapp/app/entities/item/items.html
@@ -150,7 +150,7 @@
                             </div>
                         </div>
                         <div class="col-sm-3 text-right  price-box">
-                            <h2 class="item-price"> 4.5 </h2>
+                            <h2 class="item-price"> {{item.rating | number : 2}} </h2>
                             <div class="btn-group flex-btn-group-container">
                                 <button type="submit"
                                         ui-sref="item-detail({id:item.id})"
